Fixed project grid title size on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -858,8 +858,21 @@ input[type=radio] {
     }
 
     .grid-item img {
-        width: 100%;
-        height: 100%;
+        /* width: 100%;
+        height: 100%; */
+        object-fit: cover;
+    }
+
+    .grid-item-type {
+        font-size: 1em;
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+
+    .grid-item-title {
+        font-size: 1.5em;
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 
     .row:after {
